[package]
name = "nds"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2021"

[lib]
name = "nds"
path = "src/nds/lib.rs"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.37", features = ["env", "derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", features = ["full"] }
